--- a/the-swosh-app/the-swosh-app/Base.lproj/Main.storyboard
+++ b/the-swosh-app/the-swosh-app/Base.lproj/Main.storyboard
@@ -18,52 +18,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="welcomeScreenBG" highlightedImage=" " translatesAutoresizingMaskIntoConstraints="NO" id="uPx-Os-MXF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" highlightedImage=" " translatesAutoresizingMaskIntoConstraints="NO" id="uPx-Os-MXF">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="dV3-tA-ptb">
-                                <rect key="frame" x="117" y="34" width="87" height="16"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="dV3-tA-ptb">
+                                <rect key="frame" x="100.5" y="40" width="119" height="20"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFn-gm-mc2">
-                                <rect key="frame" x="16" y="114" width="288" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFn-gm-mc2">
+                                <rect key="frame" x="47.5" y="145" width="225.5" height="57.5"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="44"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gww-wV-HiI">
-                                <rect key="frame" x="16" y="169" width="288" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="19"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="find a team in your city &amp; dominate the league " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TDU-Vx-TYg">
-                                <rect key="frame" x="16" y="225" width="288" height="56"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
-                                <color key="textColor" white="1" alpha="0.53547731164383561" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxG-Wy-tKB" customClass="Borderbutton" customModule="the_swosh_app" customModuleProvider="target">
-                                <rect key="frame" x="16" y="482" width="288" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxG-Wy-tKB" customClass="Borderbutton" customModule="the_swosh_app" customModuleProvider="target">
+                                <rect key="frame" x="43.5" y="513" width="233" height="35"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.3730201198630137" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="fFr-mz-DMG"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
                                 <state key="normal" title="GET STARTED ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gww-wV-HiI">
+                                <rect key="frame" x="66" y="202.5" width="188.5" height="25"/>
+                                <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="find a team in your city &amp; dominate the league " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TDU-Vx-TYg">
+                                <rect key="frame" x="43" y="275.5" width="234" height="36.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="234" id="Xv5-J8-DM7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="0.79987157534246578" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dV3-tA-ptb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cam-VR-thB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wxG-Wy-tKB" secondAttribute="trailing" constant="43.5" id="DUv-KJ-BfS"/>
+                            <constraint firstItem="gww-wV-HiI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Il0-9x-kR0"/>
+                            <constraint firstItem="uPx-Os-MXF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Tf0-KT-shq"/>
+                            <constraint firstItem="TDU-Vx-TYg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W9R-Dz-Nxw"/>
+                            <constraint firstItem="gww-wV-HiI" firstAttribute="top" secondItem="NFn-gm-mc2" secondAttribute="bottom" id="WtA-ca-Hst"/>
+                            <constraint firstItem="uPx-Os-MXF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ZI5-7w-hLo"/>
+                            <constraint firstItem="TDU-Vx-TYg" firstAttribute="top" secondItem="gww-wV-HiI" secondAttribute="bottom" constant="48" id="ZPA-wL-hMI"/>
+                            <constraint firstItem="NFn-gm-mc2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a4H-TC-3rn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wxG-Wy-tKB" secondAttribute="bottom" constant="20" id="cW7-Sz-7yU"/>
+                            <constraint firstItem="dV3-tA-ptb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="gY5-fr-Omu"/>
+                            <constraint firstItem="uPx-Os-MXF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="iYd-0a-M6g"/>
+                            <constraint firstItem="uPx-Os-MXF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="q1T-f5-7XO"/>
+                            <constraint firstItem="wxG-Wy-tKB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43.5" id="wWM-nn-mEH"/>
+                            <constraint firstItem="NFn-gm-mc2" firstAttribute="top" secondItem="dV3-tA-ptb" secondAttribute="bottom" constant="85" id="zZz-KB-8iH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="bgimg" destination="uPx-Os-MXF" id="JNE-I2-4pu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135" y="133.09859154929578"/>
+            <point key="canvasLocation" x="232.80000000000001" y="108.39580209895054"/>
         </scene>
     </scenes>
     <resources>
